Update project description

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,7 +8,7 @@
 
         <div class="row-fluid">
             <p>
-                <b>Play + MongoDB application template, provide samples :</b>
+                <b>Play + MongoDB application template, with build-in standard modules :</b>
             </p>
             <ul>
                 <li>User and Role Management (CRUD)</li>
@@ -23,7 +23,7 @@
             </p>
             <ul>
                 <li>Play 2.2.0 - Java version</li>
-                <li>Play2-morphia-plugin as Data Layer</li>
+                <li>Play2-morphia-plugin as Data Layer to connect with MongoDB</li>
                 <li>Deadbolt as Access Control Management</li>
                 <li>Twitter Bootstrap as css framework</li>
             </ul>
