--- a/app/views/helper/pagination.scala.html
+++ b/app/views/helper/pagination.scala.html
@@ -18,7 +18,7 @@
 
 <div class="row-fluid">
     <div class="span6">
-        <span>Showing @{page.offset + 1} to @{page.offset + page.itemSize} of @{page.totalRows} entries</span>
+        <span>Showing @if(page.itemSize() > 0){ @{page.offset + 1} } else {0} to @{page.offset + page.itemSize} of @{page.totalRows} entries</span>
     </div>
     <div class="span6">
     @if(page.totalPage > 1) {
